Fix alignment of box content (#2471)

--- a/src/popup/scss/box.scss
+++ b/src/popup/scss/box.scss
@@ -120,11 +120,6 @@
         }
 
         .action-buttons {
-          &.count {
-            align-self: start;
-            margin-top: 10px;
-          }
-
           .row-btn {
             padding-left: 5px;
             padding-right: 5px;
@@ -260,7 +255,6 @@
     display: block;
     width: 100%;
     margin-bottom: 5px;
-    min-height: 1em;
 
     @include themify($themes) {
       color: themed("mutedColor");
@@ -311,7 +305,6 @@
   .row-main {
     flex-grow: 1;
     min-width: 0;
-    align-self: start;
   }
 
   &.box-content-row-flex,
@@ -462,8 +455,12 @@
 
   .action-buttons {
     display: flex;
-    align-self: start;
     margin-left: 5px;
+
+    &.action-buttons-fixed {
+      align-self: start;
+      margin-top: 2px;
+    }
 
     .row-btn {
       cursor: pointer;
